--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-tslint": "^4.3.4",
     "mocha": "^3.0.0",
     "nodemon": "^1.10.2",
+    "sinon": "^2.1.0",
     "tslint": "^3.13.0",
     "typescript": "^2.0.3"
   },
